# Bruhs

./: .gitignore  .gitmodules  CMakeLists.txt
src/: assets.c  assets.h  globals.c  globals.h  levels.c  levels.h  main.c  object.c  object.h  player.c  player.h
src/objects/: goomba.c  goomba.h  object.c  object.h  player.c  player.h
